[package]
name = "diff-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
hf-hub = "0.3.2"
linfa = "0.7.0"
linfa-clustering = "0.7.0"
llama-cpp-2 = { version = "0.1.82", features = ["metal"] }
ndarray = "0.15"
bhtsne = "0.5.3"
indicatif = "0.17.8"
rayon = "1.10.0"
blake3 = "1.5.4"
